# ExoplayerSample

./: .gitignore  gradle.properties  settings.gradle
ExoPlayer/: .directory  .gitignore  build.gradle  build.sh
ExoPlayer/.git.bak/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
ExoPlayer/.git.bak/logs/refs/remotes/github/: release-v2
ExoPlayer/.git.bak/logs/refs/remotes/origin/: HEAD
ExoPlayer/.git.bak/objects/pack/: pack-e6d7191dda57ded4a403ea91dc054fdc1e972b41.idx
ExoPlayer/extensions/ffmpeg/: CMakeLists.txt  build.gradle
ExoPlayer/extensions/ffmpeg/src/main/java/com/google/android/exoplayer2/ext/ffmpeg/: FfmpegDecoder.java  FfmpegLibrary.java
ExoPlayer/extensions/ffmpeg/src/main/jni/: Android.mk  ffmpeg_jni.cc
ExoPlayer/extensions/ffmpeg/src/main/jni/ffmpeg/: config.h
ExoPlayer/extensions/ffmpeg/src/main/jni/ffmpeg1/: .directory  config.asm
ExoPlayer/extensions/ffmpeg/src/main/jni/includes/libavutil/: ffversion.h
ExoPlayer/extensions/flac/: build.gradle
ExoPlayer/extensions/flac/src/main/jni/: Application.mk
ExoPlayer/extensions/okhttp/: build.gradle
ExoPlayer/extensions/opus/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
sample/: Android.mk  build.gradle  local.properties
sample/src/androidTest/java/com/glee/exoplayersample/: ExampleInstrumentedTest.kt
sample/src/main/: AndroidManifest.xml
sample/src/main/aidl/com/glee/exoplayersample/: IMyAidlInterface.aidl
sample/src/main/java/com/glee/exoplayersample/: ApeExtractor.java  ApeExtractor.kt  ApeHeader.kt  PlayList.kt  (+9 more)
sample/src/main/res/layout/: activity_main.xml
(+10 files in other folders)
